--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -5,7 +5,7 @@
       <div class="col-12 col-md-6 col-xl-7">
         <div class="d-flex justify-content-center text-bg-primary">
           <div class="col-12 col-xl-9">
-            <img class="img-fluid rounded mb-4" loading="lazy" src="https://www.iskconcommunications.org/images/faviconiskcon.png" width="245" height="80" alt="ISKCON">
+            <img class="img-fluid rounded mb-4" loading="lazy" src="https://www.iskconcommunications.org/images/faviconiskcon.png" width="245" height="50" alt="ISKCON">
             <hr class="border-primary-subtle mb-4">
             <h2 class="h1 mb-4">Unforgettable Journeys, Tailored for You</h2>
             <p class="lead mb-5">We design personalized itineraries, provide expert travel tips, create inspiring content, and leverage advanced vacation planning tools.</p>
@@ -20,18 +20,7 @@
       <div class="col-12 col-md-6 col-xl-5">
         <div class="card border-0 rounded-4">
           <div class="card-body p-3 p-md-4 p-xl-5">
-            <ul class="nav nav-tabs mb-4" id="loginTabs" role="tablist">
-              <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="traveler-tab" data-bs-toggle="tab" data-bs-target="#traveler" type="button" role="tab" aria-controls="traveler" aria-selected="true">Login as Traveler</button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button class="nav-link" id="host-tab" data-bs-toggle="tab" data-bs-target="#host" type="button" role="tab" aria-controls="host" aria-selected="false">Login as Admin</button>
-              </li>
-            </ul>
-            <div class="tab-content" id="loginTabsContent">
-              <!-- Traveler Login -->
-              <div class="tab-pane fade show active" id="traveler" role="tabpanel" aria-labelledby="traveler-tab">
-                <h3>Login as Traveler</h3>
+            <h3>Login as Traveler</h3><br/>
                 <form action="/login?forward=<%= forward %>" method="post">
                   <div class="mb-3">
                     <label for="traveler-email" class="form-label">Email</label>
@@ -39,45 +28,19 @@
                   </div>
                   <div class="mb-3">
                     <label for="traveler-password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="traveler-password" name="password" value="111111" placeholder="Password" required>
+                    <input type="password" class="form-control" id="traveler-password" name="password" value="123456" placeholder="Password" required>
                   </div>
                   <div class="form-check mb-3">
                     <input class="form-check-input" type="checkbox" id="traveler-remember">
                     <label class="form-check-label" for="traveler-remember">Keep me logged in</label>
                   </div>
-                  <div class="mt-3 d-flex justify-content-between">
+                  <br/>
+                  <div class="d-flex justify-content-between">
                     <button type="submit" class="btn btn-outline-primary">Log in</button>
                     <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#resetPasswordModal"> Reset Password</button>
                     <a href="/register?forward=<%= forward %>" class="btn btn-outline-success">Register</a>
                   </div>
                 </form>
-              </div>
-
-              <!-- Host Login -->
-              <div class="tab-pane fade" id="host" role="tabpanel" aria-labelledby="host-tab">
-                <h3>Login as Host</h3>
-                <form action="/login" method="post">
-                  <div class="mb-3">
-                    <label for="host-email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="host-email" placeholder="name@example.com" required>
-                  </div>
-                  <div class="mb-3">
-                    <label for="host-password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="host-password" placeholder="Password" required>
-                  </div>
-                  <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" id="host-remember">
-                    <label class="form-check-label" for="host-remember">Keep me logged in</label>
-                  </div>
-
-                  <div class="mt-3 d-flex justify-content-between">
-                    <button type="submit" class="btn btn-outline-primary">Log in</button>
-                    <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#resetPasswordModal"> Reset Password</button>
-                    <a href="/register?forward=<%= forward %>" class="btn btn-outline-success">Register</a>
-                  </div>
-                </form>
-              </div>
-            </div>
           </div>
         </div>
       </div>
