--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -19,25 +19,8 @@
             <div class="col-12 col-md-6 col-xl-5">
                 <div class="card border-0 rounded-4">
                     <div class="card-body p-3 p-md-4 p-xl-5">
-                        <ul class="nav nav-tabs mb-4" id="registerTabs" role="tablist">
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link active" id="traveler-tab" data-bs-toggle="tab"
-                                        data-bs-target="#traveler" type="button" role="tab" aria-controls="traveler"
-                                        aria-selected="true">Signup as Traveler
-                                </button>
-                            </li>
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="host-tab" data-bs-toggle="tab" data-bs-target="#host"
-                                        type="button" role="tab" aria-controls="host" aria-selected="false">Signup as
-                                    Admin
-                                </button>
-                            </li>
-                        </ul>
-                        <div class="tab-content" id="registerTabsContent">
-                            <!-- Traveler Registration -->
-                            <div class="tab-pane fade show active" id="traveler" role="tabpanel"
-                                 aria-labelledby="traveler-tab">
-                                <h3>Register as Traveler</h3>
+                        <h3>Register as Traveler</h3>
+                        <br/>
                                 <form action="/register?forward=<%= forward %>" method="post">
                                     <div class="mb-3">
                                         <label for="traveler-name" class="form-label">Name</label>
@@ -65,7 +48,8 @@
                                             I agree to the <a href="#">Terms and Conditions</a>
                                         </label>
                                     </div>
-                                    <div class="mt-3 d-flex justify-content-between">
+                                    <br/>
+                                    <div class="d-flex justify-content-between">
                                         <button type="submit" class="btn btn-outline-primary">Sign up</button>
                                         <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal"
                                                 data-bs-target="#resetPasswordModal"> Reset Password
@@ -73,48 +57,6 @@
                                         <a href="/login?forward=<%= forward %>" class="btn btn-outline-success">Log in</a>
                                     </div>
                                 </form>
-                            </div>
-
-                            <!-- Host Registration -->
-                            <div class="tab-pane fade" id="host" role="tabpanel" aria-labelledby="host-tab">
-                                <h3>Register as Host</h3>
-                                <form action="#">
-                                    <div class="mb-3">
-                                        <label for="host-name" class="form-label">Name</label>
-                                        <input type="text" class="form-control" id="host-name" placeholder="Your Name"
-                                               required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="host-email" class="form-label">Email</label>
-                                        <input type="email" class="form-control" id="host-email"
-                                               placeholder="name@example.com" required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="host-mobile" class="form-label">Mobile</label>
-                                        <input type="tel" class="form-control" id="host-mobile" placeholder="1234567890"
-                                               required>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="host-password" class="form-label">Password</label>
-                                        <input type="password" class="form-control" id="host-password"
-                                               placeholder="Password" required>
-                                    </div>
-                                    <div class="form-check mb-3">
-                                        <input class="form-check-input" type="checkbox" id="host-terms" required>
-                                        <label class="form-check-label" for="host-terms">
-                                            I agree to the <a href="#">Terms and Conditions</a>
-                                        </label>
-                                    </div>
-                                    <div class="mt-3 d-flex justify-content-between">
-                                        <button type="submit" class="btn btn-outline-primary">Sign up</button>
-                                        <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal"
-                                                data-bs-target="#resetPasswordModal"> Reset Password
-                                        </button>
-                                        <a href="/login?forward=<%= forward %>" class="btn btn-outline-success">Log in</a>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
