--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,3 +20,4 @@
 </head>
 <body>
 <script src= "https://maps.googleapis.com/maps/api/js?key=<%= googleMapsAPIKey %>&libraries=places&callback=initMap"> </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
