--- a/views/partials/list-card.ejs
+++ b/views/partials/list-card.ejs
@@ -11,16 +11,16 @@
             <li>⭐&nbsp;&nbsp;<b>Reviews:</b> <%= listData.reviews.length %> Reviews</li>
         </ul>
         <div style="display: flex; justify-content: center; flex-wrap: wrap">
-            <a style="margin-right: 0.5rem" href="/<%= listData.id %>" class="btn btn-warning"><i class="fas fa-eye" style="color:white"></i> View</a>
+            <a style="margin-right: 0.5rem" href="/<%= listData._id %>" class="btn btn-warning"><i class="fas fa-eye" style="color:white"></i> View</a>
 
             <% if(listData.createdBy && loggedInUser) {  if(loggedInUser.isAdmin || loggedInUser.id === listData.createdBy.id) { %>
-                <a style="margin-right: 0.5rem" href="/<%= listData.id %>/edit" class="btn btn-primary"><i class="fas fa-edit"></i> Edit</a>
+                <a style="margin-right: 0.5rem" href="/<%= listData._id %>/edit" class="btn btn-primary"><i class="fas fa-edit"></i> Edit</a>
                 <form method="POST" id="deleteFormMain" style="margin-top: 0.5rem">
-                    <button class="btn btn-danger" type="button" data-id="<%= listData.id %>" onclick="deleteListing(this);"><i class="fas fa-trash"></i> Delete</button>
+                    <button class="btn btn-danger" type="button" data-id="<%= listData._id %>" onclick="deleteListing(this);"><i class="fas fa-trash"></i> Delete</button>
                 </form>
             <% } %>
            <% if(loggedInUser.username!== "---" && loggedInUser.isAdmin === false && loggedInUser.id !== listData.createdBy.id) { %>
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#reviewModal" data-bs-title="<%= listData.title %>" data-bs-id="<%= listData.id %>" > <i class="fa fa-commenting-o"></i> Comment</button>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#reviewModal" data-bs-title="<%= listData.title %>" data-bs-id="<%= listData._id %>" > <i class="fa fa-commenting-o"></i> Comment</button>
             <% } } %>
 
 
